# tiny-brain

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_emcc.sh  build_gcc_avx.sh  build_gcc_avx2.sh  build_gcc_sse.sh  build_gcc_sse4.sh
apps/: CMakeLists.txt  README.md
apps/mnist_autotrain/: CMakeLists.txt  adamax.h  main.cpp  mnist_csv_parser.h
apps/mnist_ocr/: CMakeLists.txt  index.html  main.cpp  ocr.cpp  ocr.h  ocr_embind.cpp  ocr_wrapper.cpp  ocr_wrapper.h  run.sh  tinymage.h
apps/mnist_sign/: CMakeLists.txt  index.html  index_moving.html  index_still.html  main.cpp
cmake/: platform_extras.cmake
data/ocr/models/: NOTES.txt  caffe-mnist-model  kaggle-mnist-model
sandbox/: webcam.html
sandbox/blob/: CMakeLists.txt  blob.html  main.cpp
tests/: CMakeLists.txt
tests/test_image/: CMakeLists.txt  main.cpp
tiny_brain/: tinydigit.h  tinymage.h  tinysign.h  tinyutils.h
